# raystack-admin

./: .gitignore  README.md  alembic.ini  manage.py  pyproject.toml  requirements.txt  run.py
apps/admin/: __init__.py  apps.py  urls.py
apps/admin/auth/: __init__.py
apps/admin/auth/accounts/: api.py  apps.py  decorators.py  urls.py  utils.py
apps/admin/auth/groups/: __init__.py  api.py  apps.py  models.py  views.py
apps/admin/auth/users/: api.py  apps.py  models.py  views.py
config/: settings.py  urls.py
core/: __init__.py  dependencies.py  middlewares.py
migrations/: env.py
src/: __init__.py
src/raystack_admin/: __init__.py  apps.py  urls.py
src/raystack_admin/auth/: __init__.py
src/raystack_admin/auth/accounts/: __init__.py  api.py  apps.py  urls.py  utils.py
src/raystack_admin/auth/groups/: apps.py  models.py  views.py
src/raystack_admin/auth/users/: __init__.py  api.py  apps.py  models.py  views.py
src/raystack_admin/templates/admin/includes/: navigation-fullscreen.html  navigation.html  scripts.html  sidebar.html
